projects/vb6parse/snapshots/syntax/expressions/addressof_expression.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: AddressOfExpression
          children:
            - kind: AddressOfKeyword
              text: AddressOf
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: MyProc
        - kind: Newline
          text: "\n"
