projects/vb6parse/snapshots/syntax/expressions/boolean_literal_false.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BooleanLiteralExpression
          children:
            - kind: FalseKeyword
              text: "False"
        - kind: Newline
          text: "\n"
