projects/vb6parse/snapshots/syntax/expressions/chained_member_access.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: MemberAccessExpression
          children:
            - kind: MemberAccessExpression
              children:
                - kind: Identifier
                  text: obj
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: prop1
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: prop2
        - kind: Newline
          text: "\n"
